--- a/.project
+++ b/.project
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>KARAKURIproject</name>
+	<name>Karakuri</name>
 	<comment></comment>
 	<projects>
 	</projects>
